--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity
             android:name=".Town_information"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Themes"
             android:exported="false"
